--- a/3.复习/02.代码/1.js基础/01-1.原型与原型链.html
+++ b/3.复习/02.代码/1.js基础/01-1.原型与原型链.html
@@ -35,7 +35,7 @@
 
 
             原型相关:
-                1.每个构造函数都有显式原型属性prototype
+                1.每个函数都有显式原型属性prototype
                 2.每个实例对象都有隐式原型属性__proto__
                 3.实例对象的隐式原型指向了构造函数的显式原型
                 4.原型对象上具有constructor属性指向构造函数本身
