--- a/3.复习/01.课件/Vue/Vue源码/06_数据劫持-数据绑定.html
+++ b/3.复习/01.课件/Vue/Vue源码/06_数据劫持-数据绑定.html
@@ -5,8 +5,8 @@
     <title>06_数据劫持-数据绑定</title>
 </head>
   <body>
-    <div id="app" class="A">
-      <p>{{msg}}</p>
+    <div id="app">
+      <p v-on:click="handleClick">{{msg}}</p>
     </div>
     <script src="./js/observer.js"></script>
     <script src="./js/watcher.js"></script>
@@ -21,6 +21,11 @@
             name:"xiaoming",
             msg:"123"
           },
+        },
+        methods:{
+          handleClick(){
+            console.log('handleClick')
+          }
         }
       });
 
