--- a/3.复习/01.课件/Vue/Vue源码/06_数据劫持-数据绑定.html
+++ b/3.复习/01.课件/Vue/Vue源码/06_数据劫持-数据绑定.html
@@ -24,7 +24,8 @@
         },
         methods:{
           handleClick(){
-            console.log('handleClick')
+            // console.log('handleClick')
+            vm.msg = "atguigu666"
           }
         }
       });
